wip[backend]: added mocked endpoints for kvarplata and mobile transactions
