# backend/internal/docs/swagger.yaml
@@ -1,14 +1,38 @@
 basePath: /
 definitions:
+  handler.HPUPaymentResponse:
+    properties:
+      transactionId:
+        type: integer
+    type: object
+  handler.TopUpMobilePhoneResponse:
+    properties:
+      transactionId:
+        type: integer
+    type: object
   handler.accessTokenResponse:
     properties:
       AccessToken:
+        type: string
+    type: object
+  handler.createAccountRequest:
+    properties:
+      cardInfo:
+        $ref: '#/definitions/models.CardInfo'
+      name:
         type: string
     type: object
   handler.errResponse:
     properties:
       error:
         type: string
+    type: object
+  handler.getAccountsResponse:
+    properties:
+      accounts:
+        items:
+          $ref: '#/definitions/models.PaymentAccountDto'
+        type: array
     type: object
   handler.mlDetectionResponse:
     properties:
@@ -24,6 +48,19 @@ definitions:
       sessionId:
         type: string
     type: object
+  models.CardInfo:
+    properties:
+      cardNumber:
+        type: integer
+      cvc:
+        type: integer
+      expirationDate:
+        maxLength: 7
+        minLength: 7
+        type: string
+    required:
+    - expirationDate
+    type: object
   models.DetectionStatus:
     enum:
     - 0
@@ -34,6 +71,61 @@ definitions:
     - InternalErr
     - NotEnoughParams
     - Success
+  models.HPU:
+    properties:
+      amount:
+        type: integer
+      month:
+        type: string
+      payerCode:
+        type: integer
+      year:
+        type: integer
+    type: object
+  models.HPUWithAccountId:
+    properties:
+      accountId:
+        type: integer
+      hpu:
+        $ref: '#/definitions/models.HPU'
+    type: object
+  models.HPUWithCardData:
+    properties:
+      bankCardInfo:
+        $ref: '#/definitions/models.CardInfo'
+      hpu:
+        $ref: '#/definitions/models.HPU'
+    type: object
+  models.PaymentAccountDto:
+    properties:
+      balance:
+        type: integer
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  models.PhoneReFillData:
+    properties:
+      amount:
+        type: integer
+      phoneNumber:
+        type: string
+    type: object
+  models.PhoneRefillDataWithAccountId:
+    properties:
+      accountId:
+        type: integer
+      phoneData:
+        $ref: '#/definitions/models.PhoneReFillData'
+    type: object
+  models.PhoneRefillDataWithCardData:
+    properties:
+      bankCardInfo:
+        $ref: '#/definitions/models.CardInfo'
+      phoneData:
+        $ref: '#/definitions/models.PhoneReFillData'
+    type: object
 host: api.larek.tech
 info:
   contact:
@@ -47,6 +139,62 @@ info:
   title: True tech api
   version: "1.0"
 paths:
+  /accounts/create:
+    post:
+      consumes:
+      - application/json
+      description: создание тестового счета для проведения операций
+      parameters:
+      - description: Create account
+        in: body
+        name: account
+        required: true
+        schema:
+          $ref: '#/definitions/handler.createAccountRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errResponse'
+      summary: создание платежного аккаунта с использованием банковских карт
+      tags:
+      - account
+  /accounts/my:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Create account
+        in: body
+        name: account
+        required: true
+        schema:
+          $ref: '#/definitions/handler.createAccountRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.getAccountsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errResponse'
+      tags:
+      - account
   /auth/login:
     post:
       consumes:
@@ -114,4 +262,120 @@ paths:
       summary: Запуск сценария из обработанного текста
       tags:
       - ml
+  /payments/kvartplata/card:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: HPUWithCardData
+        in: body
+        name: account
+        required: true
+        schema:
+          $ref: '#/definitions/models.HPUWithCardData'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.TopUpMobilePhoneResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errResponse'
+      summary: Оплата услуг ЖКХ с использованием данных банковской карты
+      tags:
+      - kvartplata
+  /payments/kvartplata/id:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: HPUPayment
+        in: body
+        name: account
+        required: true
+        schema:
+          $ref: '#/definitions/models.HPUWithAccountId'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.HPUPaymentResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errResponse'
+      summary: Оплата услуг жкх
+      tags:
+      - kvartplata
+  /payments/mobile/card:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: mobileTopUpRequest
+        in: body
+        name: account
+        required: true
+        schema:
+          $ref: '#/definitions/models.PhoneRefillDataWithCardData'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.TopUpMobilePhoneResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errResponse'
+      summary: Оплата телефона с использованием данных банковской карты
+      tags:
+      - mobile
+  /payments/mobile/id:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: mobileTopUpRequest
+        in: body
+        name: account
+        required: true
+        schema:
+          $ref: '#/definitions/models.PhoneRefillDataWithAccountId'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.TopUpMobilePhoneResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errResponse'
+      summary: пополнение телефона с помощью платежного аккаунта
+      tags:
+      - mobile
 swagger: "2.0"
